cpp-templates: add chapter4

--- a/cpp-templates/CMakeLists.txt
+++ b/cpp-templates/CMakeLists.txt
@@ -3,9 +3,13 @@ project(CppTemplates)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(2_4_1 chapter2_函数模板/2_4_1_重载函数模板.cpp)
+add_executable(2_4 chapter2_函数模板/2_4_重载函数模板.cpp)
 
-add_executable(3_1_1 chapter3_类模板/3_1_1_类模板.cpp)
-add_executable(3_3_1 chapter3_类模板/3_3_1_类模板的特化.cpp)
-add_executable(3_4_1 chapter3_类模板/3_4_1_局部特化.cpp)
-add_executable(3_5_1 chapter3_类模板/3_5_1_缺省模板实参.cpp)
+add_executable(3_1 chapter3_类模板/3_1_类模板.cpp)
+add_executable(3_3 chapter3_类模板/3_3_类模板的特化.cpp)
+add_executable(3_4 chapter3_类模板/3_4_局部特化.cpp)
+add_executable(3_5 chapter3_类模板/3_5_缺省模板实参.cpp)
+
+add_executable(4_1 chapter4_非类型模板参数/4_1_非类型的类模板参数.cpp)
+add_executable(4_2 chapter4_非类型模板参数/4_2_非类型的函数模板参数.cpp)
+add_executable(4_3 chapter4_非类型模板参数/4_3_非类型模板参数的限制.cpp)
