cpp-templates: add chapter5

--- a/cpp-templates/CMakeLists.txt
+++ b/cpp-templates/CMakeLists.txt
@@ -13,3 +13,5 @@ add_executable(3_5 chapter3_类模板/3_5_缺省模板实参.cpp)
 add_executable(4_1 chapter4_非类型模板参数/4_1_非类型的类模板参数.cpp)
 add_executable(4_2 chapter4_非类型模板参数/4_2_非类型的函数模板参数.cpp)
 add_executable(4_3 chapter4_非类型模板参数/4_3_非类型模板参数的限制.cpp)
+
+add_executable(5_1 chapter5_技巧性基础知识/5_1_关键字typename.cpp)
